compiler/testData/asJava/lightClasses/lightClassByFqName/compilationErrors/localClassApproximation.java
public final class B /* p.B*/ {
  @org.jetbrains.annotations.NotNull()
  private final @org.jetbrains.annotations.NotNull() p.Self<A> x;

  @org.jetbrains.annotations.NotNull()
  private final @org.jetbrains.annotations.NotNull() p.Self<A> y;

  @org.jetbrains.annotations.NotNull()
  public final @org.jetbrains.annotations.NotNull() p.Self<? extends p.Self<?>> getY();//  getY()

  @org.jetbrains.annotations.NotNull()
  public final @org.jetbrains.annotations.NotNull() p.Self<A> getX();//  getX()

  public  B();//  .ctor()
}
